--- a/Pipfile
+++ b/Pipfile
@@ -6,19 +6,13 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-certifi = "==2019.3.9"
-django = "==2.2.9"
+django = "==2.1.*"
 django-crispy-forms = "==1.7.2"
 django-taggit = "==0.24.0"
 django-webp-converter = "==0.1.2"
-gunicorn = "==19.9.0"
 httpagentparser = "==1.8.2"
-pbr = "==5.1.3"
-psycopg2 = "==2.7.7"
-pytz = "==2018.9"
-six = "==1.12.0"
 urllib3 = "==1.24.2"
-Pillow = "==6.2.0"
+Pillow = "==7.0.*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.7.3"
