--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ django-webp-converter = "==0.1.2"
 httpagentparser = "==1.8.2"
 urllib3 = "==1.24.2"
 Pillow = "==7.0.*"
+whitenoise = "==5.0.1"
 
 [requires]
 python_version = "3.7.3"
