--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ httpagentparser = "==1.8.2"
 urllib3 = "==1.24.2"
 Pillow = "==7.0.*"
 whitenoise = "==5.0.1"
+django-storages = "==1.9.*"
+paramiko = "*"
 
 [requires]
 python_version = "3.7.3"
